testsuite/tests/typecheck/should_fail/T14605.stderr
T14605.hs:16:13: error: [GHC-18872]
    • Couldn't match representation of type: forall x. ()
                               with that of: forall x. x
        arising from a use of ‘coerce’
    • In the expression: coerce @(forall x. ()) @(forall x. x)
      In an equation for ‘duplicate’:
          duplicate = coerce @(forall x. ()) @(forall x. x)

